fixtures/errors/not_enough_elements/build/lib/index.d.ts
declare const a: 1, b: undefined, c: undefined;
